--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!--header-->
-    <header>
+    <header class="flex">
       <div class="logo">
-        <img/>
+        <img src="resources/images/ic-logo.svg" alt=""/>
         <span>COLMAR ACADEMY</span>
       </div>
       <!--navigation-->
@@ -23,8 +23,8 @@
     </header>
 
     <!--banner-->
-    <div class="banner">
-      <img/>
+    <div class="banner flex">
+      <img src="" alt=""/>
       <h1>Learn something new everyday</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <div class="button">
@@ -33,30 +33,33 @@
     </div>
 
     <!--big picture section-->
-    <div class="hurt">
+    <div class="hurt flex">
       <div class="big-img">
-        <img/>
+        <img src="resources/images/information-main.jpg" alt=""/>
         <h2>It doesn't hurt to keep practicing</h2>
         <p></p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
 
       <div class="small">
-        <img/>
+        <img src="resources/images/information-orientation.jpg" alt=""/>
+        <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt=""/>
         <h3>Orientation date</h3>
         <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
         <span>Read more</span>
       </div>
 
       <div class="small">
-        <img/>
+        <img src="resources/images/information-campus.jpg" alt=""/>
+        <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt=""/>
         <h3>Our campus</h3>
         <p>Find which campus is close by you</p>
         <span>Read more</span>
       </div>
 
       <div class="small">
-        <img/>
+        <img src="resources/images/information-guest-lecture.jpg" alt=""/>
+        <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
         <h3>Our guest lecture</h3>
         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
         <span>Read more</span>
@@ -64,72 +67,74 @@
     </div>
 
     <!--start learning section-->
-    <div class="start">
+    <div class="start flex">
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-software.jpg" alt=""/>
+        <h3>Software Engineering</h3>
+        <h4>COURSES</h4>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
 
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-computer-art.jpg" alt=""/>
+        <h3>Computer art</h3>
+        <h4>COURSES</h4>
+        <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-design.jpg" alt=""/>
+        <h3>Design</h3>
+        <h4>COURSES</h4>
+        <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-data.jpg" alt=""/>
+        <h3>Data</h3>
+        <h4>COURSES</h4>
+        <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-business.jpg" alt=""/>
+        <h3>Business</h3>
+        <h4>COURSES</h4>
+        <p> Product Development, Business Development, Startup </p>
       </div>
 
       <div class="item">
-        <img>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
+        <img src="resources/images/course-marketing.jpg" alt=""/>
+        <h3>Marketing</h3>
+        <h4>COURSES</h4>
+        <p> Analytics, Content Marketing, Mobile Marketing </p>
       </div>
     </div>
 
     <!--thesis section-->
-    <div class="thesis">
+    <h1>Thesis exhibit</h1>
+    <div class="thesis flex">
       <div class="video">
-        <video></video>
-        <h3></h3>
-        <p></p>
+        <video controls> <source src="resources/videos/thesis.mp4" type="video/mp4"></source> ></video>
+        <h3>Reimagine urban</h3>
+        <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
       </div>
 
       <div class="side">
-        <img/>
-        <h3></h3>
-        <p></p>
+        <img src="resources/images/thesis-fisma.jpg" alt=""/>
+        <h3>Fisma: Design and Prototype</h3>
+        <p>Designer showcase of new prototype product</p>
       </div>
 
       <div class="side">
-        <img/>
-        <h3></h3>
-        <p></p>
+        <img src="resources/images/thesis-now-and-then.jpg" alt=""/>
+        <h3>Now and then</h3>
+        <p>Research study about New York</p>
       </div>
     </div>
 
-    <footer>
+    <!--footer-->
+    <footer class="flex">
       <span>&copy; 2016 Colmar Academy. All rights reserved</span>
       <span>Terms</span>
       <span>Privacy</span>
