--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--header-->
     <header class="flex">
-      <div class="logo">
+      <div class="logo flex">
         <img src="resources/images/ic-logo.svg" alt=""/>
         <span>COLMAR ACADEMY</span>
       </div>
@@ -24,11 +24,13 @@
 
     <!--banner-->
     <div class="banner flex">
-      <img src="" alt=""/>
-      <h1>Learn something new everyday</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="button">
+      <img src="resources/images/banner.jpg" alt=""/>
+      <div class="text flex">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="button">
         <span>Start here</span>
+        </div>
       </div>
     </div>
 
