--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
     <header class="flex">
       <div class="logo flex">
         <img src="resources/images/ic-logo.svg" alt=""/>
-        <span>COLMAR ACADEMY</span>
+        <span>COLMAR</span>
+        <span>ACADEMY</span>
       </div>
       <!--navigation-->
       <nav>
-        <span>On campus</span>
-        <span>Online</span>
-        <span>Our companies</span>
-        <span>Sign in</span>
+        <span><a href="#">On campus</a></span>
+        <span><a href="#">Online</a></span>
+        <span><a href="#">Our companies</a></span>
+        <span><a href="#">Sign in</a></span>
       </nav>
+
+      <!--mobile nav-->
+      <div class="mobile icons">
+        <img src="resources/images/ic-logo.svg"/>
+        <img src="resources/images/ic-on-campus.svg"/>
+        <img src="resources/images/ic-online.svg"/>
+        <img src="resources/images/ic-login.svg"/>
+      </div>
     </header>
 
     <!--banner-->
@@ -29,7 +38,7 @@
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="button">
-        <span>Start here</span>
+        <span><a href="#">Start here</a></span>
         </div>
       </div>
     </div>
@@ -39,89 +48,108 @@
       <div class="big-img">
         <img src="resources/images/information-main.jpg" alt=""/>
         <h2>It doesn't hurt to keep practicing</h2>
-        <p></p>
+        <p>&quot;Pellentesque accumsan tellus felis, ut imperdiet nulla placerat sit amet. Nam tincidunt nibh non nunc accumsan, sit amet tempor felis pellentesque. Quisque consectetur, lorem sit amet facilisis feugiat, velit purus laoreet sapien, id bibendum metus mi ut ante. Pellentesque luctus molestie augue, eget euismod elit maximus nec. Nam sed ipsum vel dui tristique aliquam quis eget eros. Duis a libero a lectus commodo vulputate in non diam&quot;</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
 
-      <div class="small">
+      <div class="three-pictures flex">
+      <div class="small flex">
+        <div class="img-container">
         <img src="resources/images/information-orientation.jpg" alt=""/>
         <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt=""/>
+      </div>
+        <div class="text flex">
         <h3>Orientation date</h3>
         <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
-        <span>Read more</span>
+        <span><a href="#">Read more</a></span>
+      </div>
       </div>
 
-      <div class="small">
+      <div class="small flex">
+        <div class="img-container">
         <img src="resources/images/information-campus.jpg" alt=""/>
         <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt=""/>
+        </div>
+        <div class="text flex">
         <h3>Our campus</h3>
         <p>Find which campus is close by you</p>
-        <span>Read more</span>
+        <span><a href="#">Read more</a></span>
+      </div>
       </div>
 
-      <div class="small">
+      <div class="small flex">
+        <div class="img-container">
         <img src="resources/images/information-guest-lecture.jpg" alt=""/>
         <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
+        </div>
+        <div class="text flex">
         <h3>Our guest lecture</h3>
         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <span>Read more</span>
+        <span><a href="#">Read more</a></span>
+      </div>
       </div>
     </div>
+  </div>
 
     <!--start learning section-->
+    <div class="learning-section">
+    <h2>Start learning</h2>
     <div class="start flex">
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-software.jpg" alt=""/>
         <h3>Software Engineering</h3>
         <h4>COURSES</h4>
         <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
 
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-computer-art.jpg" alt=""/>
         <h3>Computer art</h3>
         <h4>COURSES</h4>
         <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-design.jpg" alt=""/>
         <h3>Design</h3>
         <h4>COURSES</h4>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-data.jpg" alt=""/>
         <h3>Data</h3>
         <h4>COURSES</h4>
         <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-business.jpg" alt=""/>
         <h3>Business</h3>
         <h4>COURSES</h4>
         <p> Product Development, Business Development, Startup </p>
       </div>
 
-      <div class="item">
+      <div class="item flex">
         <img src="resources/images/course-marketing.jpg" alt=""/>
         <h3>Marketing</h3>
         <h4>COURSES</h4>
         <p> Analytics, Content Marketing, Mobile Marketing </p>
       </div>
     </div>
+  </div>
 
     <!--thesis section-->
-    <h1>Thesis exhibit</h1>
+
     <div class="thesis flex">
+      <h2>Thesis exhibit</h2>
       <div class="video">
         <video controls> <source src="resources/videos/thesis.mp4" type="video/mp4"></source> ></video>
         <h3>Reimagine urban</h3>
         <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
       </div>
 
+      <div class="sides">
       <div class="side">
         <img src="resources/images/thesis-fisma.jpg" alt=""/>
         <h3>Fisma: Design and Prototype</h3>
@@ -133,6 +161,7 @@
         <h3>Now and then</h3>
         <p>Research study about New York</p>
       </div>
+    </div>
     </div>
 
     <!--footer-->
