finished desktop view, cleaning css in progress

--- a/index.html
+++ b/index.html
@@ -32,106 +32,112 @@
     </header>
 
     <!--banner-->
-    <div class="banner flex">
-      <img src="resources/images/banner.jpg" alt=""/>
-      <div class="text flex">
-        <h1>Learn something new everyday</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="button">
-        <span><a href="#">Start here</a></span>
+    <div class="banner flex max-width">
+      <div class="content-big">
+        <img class=" max-width" src="resources/images/banner.jpg" alt=""/>
+      </div>
+      <div class="content-small flex">
+        <div class="text flex">
+          <h1>Learn something new everyday</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="button">
+            <span><a href="#">Start here</a></span>
+          </div>
         </div>
       </div>
     </div>
 
     <!--big picture section-->
-    <div class="hurt flex">
-      <div class="big-img">
-        <img src="resources/images/information-main.jpg" alt=""/>
+    <div class="hurt flex  max-width">
+      <div class="content-big">
+        <div class="big-img">
+          <img class="h-auto max-width" src="resources/images/information-main.jpg" alt=""/>
+        </div>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>&quot;Pellentesque accumsan tellus felis, ut imperdiet nulla placerat sit amet. Nam tincidunt nibh non nunc accumsan, sit amet tempor felis pellentesque. Quisque consectetur, lorem sit amet facilisis feugiat, velit purus laoreet sapien, id bibendum metus mi ut ante. Pellentesque luctus molestie augue, eget euismod elit maximus nec. Nam sed ipsum vel dui tristique aliquam quis eget eros. Duis a libero a lectus commodo vulputate in non diam&quot;</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
 
-      <div class="three-pictures flex">
+      <div class="three-pictures content-small flex">
+        <div class="small flex">
+          <div class="img-container">
+            <img class="h-auto  max-width" src="resources/images/information-orientation.jpg" alt=""/>
+            <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt=""/>
+          </div>
+          <div class="text flex">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+            <span><a href="#">Read more</a></span>
+          </div>
+        </div>
+
       <div class="small flex">
         <div class="img-container">
-        <img src="resources/images/information-orientation.jpg" alt=""/>
-        <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt=""/>
-      </div>
+          <img class="h-auto  max-width" src="resources/images/information-campus.jpg" alt=""/>
+          <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt=""/>
+        </div>
         <div class="text flex">
-        <h3>Orientation date</h3>
-        <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
-        <span><a href="#">Read more</a></span>
-      </div>
+          <h3>Our campus</h3>
+          <p>Find which campus is close by you</p>
+          <span><a href="#">Read more</a></span>
+        </div>
       </div>
 
       <div class="small flex">
         <div class="img-container">
-        <img src="resources/images/information-campus.jpg" alt=""/>
-        <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt=""/>
+          <img class="h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt=""/>
+          <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
         </div>
         <div class="text flex">
-        <h3>Our campus</h3>
-        <p>Find which campus is close by you</p>
-        <span><a href="#">Read more</a></span>
-      </div>
-      </div>
-
-      <div class="small flex">
-        <div class="img-container">
-        <img src="resources/images/information-guest-lecture.jpg" alt=""/>
-        <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <span><a href="#">Read more</a></span>
         </div>
-        <div class="text flex">
-        <h3>Our guest lecture</h3>
-        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <span><a href="#">Read more</a></span>
-      </div>
       </div>
     </div>
   </div>
 
     <!--start learning section-->
     <div class="learning-section">
-    <h2>Start learning</h2>
-    <div class="start flex">
-      <div class="item flex">
-        <img src="resources/images/course-software.jpg" alt=""/>
-        <h3>Software Engineering</h3>
-        <h4>COURSES</h4>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
-      </div>
+      <h2>Start learning</h2>
+      <div class="start flex">
+        <div class="item flex">
+          <img class="h-auto max-width" src="resources/images/course-software.jpg" alt=""/>
+          <h3>Software Engineering</h3>
+          <h4>COURSES</h4>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
 
       <div class="item flex">
-        <img src="resources/images/course-computer-art.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-computer-art.jpg" alt=""/>
         <h3>Computer art</h3>
         <h4>COURSES</h4>
         <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
       <div class="item flex">
-        <img src="resources/images/course-design.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-design.jpg" alt=""/>
         <h3>Design</h3>
         <h4>COURSES</h4>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
       <div class="item flex">
-        <img src="resources/images/course-data.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-data.jpg" alt=""/>
         <h3>Data</h3>
         <h4>COURSES</h4>
         <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
       <div class="item flex">
-        <img src="resources/images/course-business.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-business.jpg" alt=""/>
         <h3>Business</h3>
         <h4>COURSES</h4>
         <p> Product Development, Business Development, Startup </p>
       </div>
 
       <div class="item flex">
-        <img src="resources/images/course-marketing.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-marketing.jpg" alt=""/>
         <h3>Marketing</h3>
         <h4>COURSES</h4>
         <p> Analytics, Content Marketing, Mobile Marketing </p>
@@ -141,37 +147,48 @@
 
     <!--thesis section-->
 
+    <h2 class="flex max-width">Thesis exhibit</h2>
     <div class="thesis flex">
-      <h2>Thesis exhibit</h2>
-      <div class="video">
-        <video controls> <source src="resources/videos/thesis.mp4" type="video/mp4"></source> ></video>
-        <h3>Reimagine urban</h3>
-        <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
+      <div class ="content-big h-auto">
+        <div class="video">
+        <!--MAKE A LOOOP!!!!-->
+          <video class="h-auto max-width" controls> <source src="resources/videos/thesis.mp4" type="video/mp4"></source> ></video>
+          <h3>Reimagine urban</h3>
+          <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
+        </div>
       </div>
 
-      <div class="sides">
-      <div class="side">
-        <img src="resources/images/thesis-fisma.jpg" alt=""/>
-        <h3>Fisma: Design and Prototype</h3>
-        <p>Designer showcase of new prototype product</p>
-      </div>
+      <div class="sides content-small flex">
+        <div class="small flex">
+          <div class="img-container ">
+            <img class="h-auto max-width" src="resources/images/thesis-fisma.jpg" alt=""/>
+          </div>
+          <div class="text flex">
+            <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
 
-      <div class="side">
-        <img src="resources/images/thesis-now-and-then.jpg" alt=""/>
-        <h3>Now and then</h3>
-        <p>Research study about New York</p>
+        <div class="small flex">
+          <div class="img-container">
+            <img class="h-auto max-width" src="resources/images/thesis-now-and-then.jpg" alt=""/>
+          </div>
+          <div class="text flex">
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
       </div>
-    </div>
     </div>
 
     <!--footer-->
     <footer class="flex">
       <span>&copy; 2016 Colmar Academy. All rights reserved</span>
-      <span>Terms</span>
-      <span>Privacy</span>
+      <div class="terms flex">
+        <span>Terms</span>
+        <span>Privacy</span>
+      </div>
     </footer>
-
-
 
   </body>
 </html>
