mobile version in progress

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>Colmar Academy</title>
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
@@ -23,7 +24,7 @@
       </nav>
 
       <!--mobile nav-->
-      <div class="mobile icons">
+      <div class="mobile icons flex">
         <img src="resources/images/ic-logo.svg"/>
         <img src="resources/images/ic-on-campus.svg"/>
         <img src="resources/images/ic-online.svg"/>
@@ -61,8 +62,8 @@
       <div class="three-pictures content-small flex">
         <div class="small flex">
           <div class="img-container">
-            <img class="h-auto  max-width" src="resources/images/information-orientation.jpg" alt=""/>
-            <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt=""/>
+            <img class="desktop h-auto  max-width" src="resources/images/information-orientation.jpg" alt=""/>
+            <img class="mobile-img" src="resources/images/information-orientation-mobile.jpg" alt=""/>
           </div>
           <div class="text flex">
             <h3>Orientation date</h3>
@@ -73,8 +74,8 @@
 
       <div class="small flex">
         <div class="img-container">
-          <img class="h-auto  max-width" src="resources/images/information-campus.jpg" alt=""/>
-          <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt=""/>
+          <img class="desktop h-auto  max-width" src="resources/images/information-campus.jpg" alt=""/>
+          <img class="mobile-img" src="resources/images/information-campus-mobile.jpg" alt=""/>
         </div>
         <div class="text flex">
           <h3>Our campus</h3>
@@ -85,8 +86,8 @@
 
       <div class="small flex">
         <div class="img-container">
-          <img class="h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt=""/>
-          <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
+          <img class="desktop h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt=""/>
+          <img class="mobile-img" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
         </div>
         <div class="text flex">
           <h3>Our guest lecture</h3>
@@ -103,42 +104,42 @@
       <div class="start flex">
         <div class="item flex">
           <img class="h-auto max-width" src="resources/images/course-software.jpg" alt=""/>
-          <h3>Software Engineering</h3>
+          <h3><a href="#">Software Engineering</a></h3>
           <h4>COURSES</h4>
           <p>Web Development, Mobile Development, iOT, APIs</p>
         </div>
 
       <div class="item flex">
         <img class="h-auto max-width" src="resources/images/course-computer-art.jpg" alt=""/>
-        <h3>Computer art</h3>
+        <h3><a href="#">Computer art</a></h3>
         <h4>COURSES</h4>
         <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
       <div class="item flex">
         <img class="h-auto max-width" src="resources/images/course-design.jpg" alt=""/>
-        <h3>Design</h3>
+        <h3><a href="#">Design</a></h3>
         <h4>COURSES</h4>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
       <div class="item flex">
         <img class="h-auto max-width" src="resources/images/course-data.jpg" alt=""/>
-        <h3>Data</h3>
+        <h3><a href="#">Data</a></h3>
         <h4>COURSES</h4>
         <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
       <div class="item flex">
         <img class="h-auto max-width" src="resources/images/course-business.jpg" alt=""/>
-        <h3>Business</h3>
+        <h3><a href="#">Business</a></h3>
         <h4>COURSES</h4>
         <p> Product Development, Business Development, Startup </p>
       </div>
 
       <div class="item flex">
         <img class="h-auto max-width" src="resources/images/course-marketing.jpg" alt=""/>
-        <h3>Marketing</h3>
+        <h3><a href="#">Marketing</a></h3>
         <h4>COURSES</h4>
         <p> Analytics, Content Marketing, Mobile Marketing </p>
       </div>
@@ -185,8 +186,8 @@
     <footer class="flex">
       <span>&copy; 2016 Colmar Academy. All rights reserved</span>
       <div class="terms flex">
-        <span>Terms</span>
-        <span>Privacy</span>
+        <span><a href="#">Terms</a></span>
+        <span><a href="#">Privacy</a></span>
       </div>
     </footer>
 
