--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Colmar Academy</title>
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Exo:400,700|Vollkorn" rel="stylesheet">
   </head>
+
+
   <body>
     <!--header-->
     <header class="flex">
