mobile improved, alt added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--header-->
     <header class="flex">
       <div class="logo flex">
-        <img src="resources/images/ic-logo.svg" alt=""/>
+        <img src="resources/images/ic-logo.svg" alt="logo"/>
         <span>COLMAR</span>
         <span>ACADEMY</span>
       </div>
@@ -28,17 +28,17 @@
 
       <!--mobile nav-->
       <div class="mobile icons flex">
-        <img src="resources/images/ic-logo.svg"/>
-        <img src="resources/images/ic-on-campus.svg"/>
-        <img src="resources/images/ic-online.svg"/>
-        <img src="resources/images/ic-login.svg"/>
+        <img src="resources/images/ic-logo.svg" alt="logo"/>
+        <img src="resources/images/ic-on-campus.svg" alt="icon"/>
+        <img src="resources/images/ic-online.svg" alt="icon"/>
+        <img src="resources/images/ic-login.svg" alt="icon"/>
       </div>
     </header>
 
     <!--banner-->
     <div class="banner flex max-width">
       <div class="content-big">
-        <img class=" max-width" src="resources/images/banner.jpg" alt=""/>
+        <img class=" max-width" src="resources/images/banner.jpg" alt="some girls"/>
       </div>
       <div class="content-small flex">
         <div class="text flex">
@@ -55,7 +55,7 @@
     <div class="hurt flex  max-width">
       <div class="content-big">
         <div class="big-img">
-          <img class="h-auto max-width" src="resources/images/information-main.jpg" alt=""/>
+          <img class="h-auto max-width" src="resources/images/information-main.jpg" alt="some guy"/>
         </div>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>&quot;Pellentesque accumsan tellus felis, ut imperdiet nulla placerat sit amet. Nam tincidunt nibh non nunc accumsan, sit amet tempor felis pellentesque. Quisque consectetur, lorem sit amet facilisis feugiat, velit purus laoreet sapien, id bibendum metus mi ut ante. Pellentesque luctus molestie augue, eget euismod elit maximus nec. Nam sed ipsum vel dui tristique aliquam quis eget eros. Duis a libero a lectus commodo vulputate in non diam&quot;</p>
@@ -65,8 +65,8 @@
       <div class="three-pictures content-small flex">
         <div class="small flex">
           <div class="img-container">
-            <img class="desktop h-auto  max-width" src="resources/images/information-orientation.jpg" alt=""/>
-            <img class="mobile-img" src="resources/images/information-orientation-mobile.jpg" alt=""/>
+            <img class="desktop h-auto  max-width" src="resources/images/information-orientation.jpg" alt="people"/>
+            <img class="mobile-img" src="resources/images/information-orientation-mobile.jpg" alt="people"/>
           </div>
           <div class="text flex">
             <h3>Orientation date</h3>
@@ -77,8 +77,8 @@
 
       <div class="small flex">
         <div class="img-container">
-          <img class="desktop h-auto  max-width" src="resources/images/information-campus.jpg" alt=""/>
-          <img class="mobile-img" src="resources/images/information-campus-mobile.jpg" alt=""/>
+          <img class="desktop h-auto  max-width" src="resources/images/information-campus.jpg" alt="campus"/>
+          <img class="mobile-img" src="resources/images/information-campus-mobile.jpg" alt="campus"/>
         </div>
         <div class="text flex">
           <h3>Our campus</h3>
@@ -89,8 +89,8 @@
 
       <div class="small flex">
         <div class="img-container">
-          <img class="desktop h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt=""/>
-          <img class="mobile-img" src="resources/images/information-guest-lecture-mobile.jpg" alt=""/>
+          <img class="desktop h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt="old guy"/>
+          <img class="mobile-img" src="resources/images/information-guest-lecture-mobile.jpg" alt="old guy"/>
         </div>
         <div class="text flex">
           <h3>Our guest lecture</h3>
@@ -106,42 +106,42 @@
       <h2>Start learning</h2>
       <div class="start flex">
         <div class="item flex">
-          <img class="h-auto max-width" src="resources/images/course-software.jpg" alt=""/>
+          <img class="h-auto max-width" src="resources/images/course-software.jpg" alt="computers"/>
           <h3><a href="#">Software Engineering</a></h3>
           <h4>COURSES</h4>
           <p>Web Development, Mobile Development, iOT, APIs</p>
         </div>
 
       <div class="item flex">
-        <img class="h-auto max-width" src="resources/images/course-computer-art.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-computer-art.jpg" alt="mobile phone"/>
         <h3><a href="#">Computer art</a></h3>
         <h4>COURSES</h4>
         <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
       <div class="item flex">
-        <img class="h-auto max-width" src="resources/images/course-design.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-design.jpg" alt="photographer"/>
         <h3><a href="#">Design</a></h3>
         <h4>COURSES</h4>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
       <div class="item flex">
-        <img class="h-auto max-width" src="resources/images/course-data.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-data.jpg" alt="computer"/>
         <h3><a href="#">Data</a></h3>
         <h4>COURSES</h4>
         <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
       <div class="item flex">
-        <img class="h-auto max-width" src="resources/images/course-business.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-business.jpg" alt="chess"/>
         <h3><a href="#">Business</a></h3>
         <h4>COURSES</h4>
         <p> Product Development, Business Development, Startup </p>
       </div>
 
       <div class="item flex">
-        <img class="h-auto max-width" src="resources/images/course-marketing.jpg" alt=""/>
+        <img class="h-auto max-width" src="resources/images/course-marketing.jpg" alt="watch"/>
         <h3><a href="#">Marketing</a></h3>
         <h4>COURSES</h4>
         <p> Analytics, Content Marketing, Mobile Marketing </p>
@@ -156,7 +156,7 @@
       <div class ="content-big h-auto">
         <div class="video">
         <!--MAKE A LOOOP!!!!-->
-          <video class="h-auto max-width" controls> <source src="resources/videos/thesis.mp4" type="video/mp4"></source> ></video>
+          <video class="h-auto max-width" src="resources/videos/thesis.mp4" type="video/mp4" controls> ></video>
           <h3>Reimagine urban</h3>
           <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
         </div>
@@ -165,7 +165,7 @@
       <div class="sides content-small flex">
         <div class="small flex">
           <div class="img-container ">
-            <img class="h-auto max-width" src="resources/images/thesis-fisma.jpg" alt=""/>
+            <img class="h-auto max-width" src="resources/images/thesis-fisma.jpg" alt="papers"/>
           </div>
           <div class="text flex">
             <h3>Fisma: Design and Prototype</h3>
@@ -175,7 +175,7 @@
 
         <div class="small flex">
           <div class="img-container">
-            <img class="h-auto max-width" src="resources/images/thesis-now-and-then.jpg" alt=""/>
+            <img class="h-auto max-width" src="resources/images/thesis-now-and-then.jpg" alt="New York"/>
           </div>
           <div class="text flex">
             <h3>Now and then</h3>
