--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
@@ -7,6 +7,9 @@
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Exo:400,700|Vollkorn" rel="stylesheet">
+    <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
+
   </head>
 
 
@@ -36,11 +39,11 @@
     </header>
 
     <!--banner-->
-    <div class="banner flex max-width">
+    <div class="banner flex max-width column" role="complementary">
       <div class="content-big">
-        <img class=" max-width" src="resources/images/banner.jpg" alt="some girls"/>
+        <img class=" max-width" src="resources/images/banner.jpg" alt=""/>
       </div>
-      <div class="content-small flex">
+      <div class="content-small flex" role="presentation">
         <div class="text flex">
           <h1>Learn something new everyday</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -52,10 +55,10 @@
     </div>
 
     <!--big picture section-->
-    <div class="hurt flex  max-width">
+    <div class="hurt flex  max-width" role="complementary">
       <div class="content-big">
         <div class="big-img">
-          <img class="h-auto max-width" src="resources/images/information-main.jpg" alt="some guy"/>
+          <img class="h-auto max-width" src="resources/images/information-main.jpg" alt="man reading a book"/>
         </div>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>&quot;Pellentesque accumsan tellus felis, ut imperdiet nulla placerat sit amet. Nam tincidunt nibh non nunc accumsan, sit amet tempor felis pellentesque. Quisque consectetur, lorem sit amet facilisis feugiat, velit purus laoreet sapien, id bibendum metus mi ut ante. Pellentesque luctus molestie augue, eget euismod elit maximus nec. Nam sed ipsum vel dui tristique aliquam quis eget eros. Duis a libero a lectus commodo vulputate in non diam&quot;</p>
@@ -63,8 +66,8 @@
       </div>
 
       <div class="three-pictures content-small flex">
-        <div class="small flex">
-          <div class="img-container">
+        <div class="small flex column">
+          <div class="img-container" role="presentation">
             <img class="desktop h-auto  max-width" src="resources/images/information-orientation.jpg" alt="people"/>
             <img class="mobile-img" src="resources/images/information-orientation-mobile.jpg" alt="people"/>
           </div>
@@ -75,8 +78,8 @@
           </div>
         </div>
 
-      <div class="small flex">
-        <div class="img-container">
+      <div class="small flex column">
+        <div class="img-container" role="presentation">
           <img class="desktop h-auto  max-width" src="resources/images/information-campus.jpg" alt="campus"/>
           <img class="mobile-img" src="resources/images/information-campus-mobile.jpg" alt="campus"/>
         </div>
@@ -87,8 +90,8 @@
         </div>
       </div>
 
-      <div class="small flex">
-        <div class="img-container">
+      <div class="small flex column">
+        <div class="img-container" role="presentation">
           <img class="desktop h-auto  max-width" src="resources/images/information-guest-lecture.jpg" alt="old guy"/>
           <img class="mobile-img" src="resources/images/information-guest-lecture-mobile.jpg" alt="old guy"/>
         </div>
@@ -104,43 +107,43 @@
     <!--start learning section-->
     <div class="learning-section">
       <h2>Start learning</h2>
-      <div class="start flex">
-        <div class="item flex">
+      <div class="start flex column">
+        <div class="item flex" role="presentation">
           <img class="h-auto max-width" src="resources/images/course-software.jpg" alt="computers"/>
           <h3><a href="#">Software Engineering</a></h3>
           <h4>COURSES</h4>
           <p>Web Development, Mobile Development, iOT, APIs</p>
         </div>
 
-      <div class="item flex">
+      <div class="item flex" role="presentation">
         <img class="h-auto max-width" src="resources/images/course-computer-art.jpg" alt="mobile phone"/>
         <h3><a href="#">Computer art</a></h3>
         <h4>COURSES</h4>
         <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
       </div>
 
-      <div class="item flex">
+      <div class="item flex" role="presentation">
         <img class="h-auto max-width" src="resources/images/course-design.jpg" alt="photographer"/>
         <h3><a href="#">Design</a></h3>
         <h4>COURSES</h4>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
 
-      <div class="item flex">
+      <div class="item flex" role="presentation">
         <img class="h-auto max-width" src="resources/images/course-data.jpg" alt="computer"/>
         <h3><a href="#">Data</a></h3>
         <h4>COURSES</h4>
         <p> Data Science, Big Data, SQL, Data Visualization </p>
       </div>
 
-      <div class="item flex">
+      <div class="item flex" role="presentation">
         <img class="h-auto max-width" src="resources/images/course-business.jpg" alt="chess"/>
         <h3><a href="#">Business</a></h3>
         <h4>COURSES</h4>
         <p> Product Development, Business Development, Startup </p>
       </div>
 
-      <div class="item flex">
+      <div class="item flex" role="presentation">
         <img class="h-auto max-width" src="resources/images/course-marketing.jpg" alt="watch"/>
         <h3><a href="#">Marketing</a></h3>
         <h4>COURSES</h4>
@@ -152,18 +155,18 @@
     <!--thesis section-->
 
     <h2 class="flex max-width">Thesis exhibit</h2>
-    <div class="thesis flex">
+    <div class="thesis flex column">
       <div class ="content-big h-auto">
-        <div class="video">
+        <div class="video" role="complementary">
         <!--MAKE A LOOOP!!!!-->
-          <video class="h-auto max-width" src="resources/videos/thesis.mp4" type="video/mp4" controls> ></video>
+          <video class="h-auto max-width" src="resources/videos/thesis.mp4" type="video/mp4" autoplay loop></video>
           <h3>Reimagine urban</h3>
           <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
         </div>
       </div>
 
       <div class="sides content-small flex">
-        <div class="small flex">
+        <div class="small flex column" role="presentation">
           <div class="img-container ">
             <img class="h-auto max-width" src="resources/images/thesis-fisma.jpg" alt="papers"/>
           </div>
@@ -173,7 +176,7 @@
           </div>
         </div>
 
-        <div class="small flex">
+        <div class="small flex column" role="presentation">
           <div class="img-container">
             <img class="h-auto max-width" src="resources/images/thesis-now-and-then.jpg" alt="New York"/>
           </div>
