--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class ="content-big h-auto">
         <div class="video" role="complementary">
         <!--MAKE A LOOOP!!!!-->
-          <video class="h-auto max-width" autobuffer autoplay loop> <source src="resources/videos/thesis.mp4" type="video/mp4"/> Sorry, your device doesn't support video files </video>
+          <video class="h-auto max-width" src="resources/videos/thesis.mp4" autoplay loop> Sorry, your device doesn't support video files </video>
           <h3>Reimagine urban</h3>
           <p>Maecenas sed ante ex. Nulla quis lorem sit amet neque volutpat venenatis et at ligula. Suspendisse vulputate quis dui ut mollis. Duis tincidunt mauris id eros congue fermentum. Cras ut leo odio. Proin gravida augue quis metus ornare, non bibendum urna auctor. Etiam leo libero, consectetur at feugiat eu, semper non nulla. Nunc et lacus lobortis, facilisis lectus nec, tempor nisi.</p>
         </div>
